fix scrollbar horizontal jumps

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,7 @@ html {
 .ltr {
   direction: ltr;
 }
+
+html {
+  overflow-y: scroll;
+}
